# RGPS

./: README.md  parameter.json  pyproject.toml  template.inp
rgps.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
rgps/cli/: main.py  run_gen.py  run_opt.py  run_perturb.py  run_select.py  run_submit.py
rgps/data/: __init__.py  atomic_data.py
rgps/modules/: generation.py  optimization.py  perturbation.py  selection.py  submission.py
rgps/tools/: __init__.py  analysis.py  calculators.py  geometry.py  io.py  vis.py
